# backdrop

./: .gitignore  Cargo.toml  README.md  diesel.toml  raves.db
.github/workflows/: ci.yml
.sqlx/: query-01fb91a663a6de42c7ad5ff3cdd6d18bfd8cec8dff75605e6c81003285549d78.json  query-196953f0d87175d3ea71f8c353b4df98c3b4eb39c10ba2de9067f2556834bb3b.json  query-2e2da80807e94a55a5b6151735df807ec79b1277abe271c113e429f94b3cdb1b.json  query-300f24b05e9d9ea142221747d442b64157f80010ebf865415387fe304176631b.json  query-5c65472bfefa4824073f4462a7822f19360f7eed979566d7e7aeea4b54b4c3cd.json  query-7b97845c5d85715e7c35378c4e94e2d6abdc89076232f8266eba91cc440ec3bf.json  query-8136a5085fa92824a71fd59999d8ab16e7bf13a673e94c5924ac904acdc2170d.json  query-90121f43ec03614c086993fda2a091635c59b2b97a3369085f4c00e9f76ddd5c.json  query-b684f6f8d49f6605881a61d83f0174ebac2e8a7063cff012f36708b418b4061d.json
examples/: checking.rs  kamadak_dump_exif.rs  media.rs  query.rs  thumbnail.rs
migrations/: 0001_tables.sql  0002_tables.sql  0003_tables.sql  0004_tables.sql
sql/: table.sql
src/: config.rs  database.rs  error.rs  lib.rs  watch.rs
src/database/: connect.rs  error.rs  mod.rs
src/models/: image.rs  metadata.rs  mod.rs  tags.rs  thumbnail.rs
src/models/media/: hash.rs  load.rs  metadata.rs  mod.rs
src/models/media/builder/: avif.rs  generic.rs  image_crate.rs  kamadak.rs  matroska.rs  mod.rs  mp4parse.rs  nom.rs
src/models/metadata/: mod.rs  types.rs
src/models/metadata/builder/: avif.rs  image_crate.rs  kamadak.rs  matroska.rs  mod.rs  mp4parse.rs  nom.rs
src/search/: details.rs  mod.rs  modifiers.rs  query.rs  sort.rs
src/types/: image.rs  metadata.rs  mod.rs  tag.rs
src/watch/: mod.rs
tests/: README.md  db.rs  file_watcher.rs  hash.rs  search.rs
tests/assets/: fear.avif
tests/common/: mod.rs
