[package]
name = "backdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
fraction = { version = "0.15.3", features = ["with-serde-support"] }
pisserror = "0.2"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
async-watcher = "0.3.0"
tracing = "0.1.40"
async-walkdir = "2.0.0"
rand = "0.8.5"
flutter_rust_bridge = "2.3.0"                                        # note: this is to specify acceptable inputs for flutter ffi

# kinda unused rn
jiff = { version = "0.1.13", features = ["serde"] }

# async
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
futures = { version = "0.3.30", default-features = false, features = [
    "alloc",
    "std",
    "async-await",
] }

# related to image/video proc
kamadak_exif = { version = "0.5.5", package = "kamadak-exif" } # for photos. supports a many types.
nom-exif = { git = "https://github.com/onkoe/nom-exif", branch = "main", features = [
    "async",
] } # videos: mov, mp4
# FIXME: we need additional exif formats and the entirety of xmp
# image = { version = "0.25.2", features = ["avif-native"] }
image = "0.25.2"
infer = "0.16.0"
mp4parse = "0.17.0"
matroska = "0.27.0"
camino = { version = "1.1.9", features = ["serde", "serde1"] }
sqlx = { version = "0.8.3", features = ["sqlite", "chrono", "json", "macros", "uuid", "runtime-tokio"] }
chrono = { version = "0.4.39", features = ["serde"] }
constcat = "0.5.1"
uuid = { version = "1.12.0", features = ["v4", "serde"] }
# crc32fast = "1.4.2"

# sys dependencies
# note: we have to use a git version of ffmpeg-next because of cross-compilation bug
# (see https://github.com/zmwangx/rust-ffmpeg-sys/issues/84)
#ffmpeg-next = { version = "7.0", features = ["build", "static"] }


[dependencies.ffmpeg-next]
git = "https://github.com/onkoe/rust-ffmpeg"
branch = "master"
# features = ["build", "static"]
features = ["build"]

[dev-dependencies]
async-ctrlc = "1.2.0"
clap = { version = "4.5.17", features = ["derive"] }
tracing-subscriber = "0.3.18"
dirs = "5.0.1"
anyhow = "1.0.95"
console-subscriber = "0.4.1"
